WCompiler/WSpec.bnf
Program			= {<Block>}
Block			= { <FunctionCall> | <Conditional> | <Loop> | <Declaration> | <Assignment> | <Import> }*
LoopBlock		= { <FunctionCall> | <Conditional> | <Loop> | <Declaration> | <Assignment> | <Import> | <Break> }*

Expr			= <Term> { (+ | -) <Term> }*
Term			= <SignedFactor> { (* | / | %) <SignedFactor> }*
SignedFactor	= { + | - } <Factor>
Factor			= (<IntLiteral> | <Ident>{.<Property>} | <FunctionCall> | (<Expr>))
IntOp			= (> | >= | < | <= | =)

BooleanExpr		= ( <BooleanExpr> <BoolOp> <BooleanExpr> | <Expr> <IntOp> <Expr> | {Not} <BooleanExpr> )
Boolean			= ( True | False )
BoolOp			= ( And / Or / & / | )

If				= If <BooleanExpr> [ {<Block>} ] {[ {<Block>} ]}
Loop			= Repeat {<Expr>} [ {<LoopBlock>} ]
Break			= Escape

Import			= { <Link> | <Reference> }
Link			= Link <Ident>
Reference		= Ref <Ident>

Declaration		= Item <Ident> { = <Expr> }
Assignment		= <Ident> = <Expr>

FunctionCall	= <Ident>({<Params>})
Params			= { <Expr> | <Expr>, <Params> }
